# RULA_RTMPose

./: .gitignore  README.md  [id].vue  check_env.py  demo_with_img.py  demo_with_video.py  drawing.md  index.py  index.vue  pose_image_2d_3d.py  pyproject.toml  rula_calculator.py  test.py  遮擋判定方法.md
.claude/: settings.local.json
src/rula_realtime_app/: __init__.py  __main__.py
src/rula_realtime_app/core/: __init__.py  camera_handler.py  config.py  frame_processor.py  kinect_handler.py  kinect_rgb_handler.py  pose_detector.py  realtime_processor.py  rula_calculator.py  rula_tables.py  utils.py  video_file_processor.py
src/rula_realtime_app/ui/: __init__.py  components.py  dialogs.py  history_window.py  language.py  launcher_window.py  main_window.py  realtime_window.py  result_window.py  styles.py  upload_window.py
src/rula_records/: recording_20260301_144304.txt  recording_20260301_144640.txt
src/rula_snapshots/: rula_20260301_144125.txt
