[project]
name = "rula-rtmpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime-gpu>=1.24.4",
    "opencv-python>=4.13.0.92",
    "rtmlib>=0.0.15",
    "pyqt6>=6.9.1",
    "mediapipe==0.10.14",
    "matplotlib>=3.10.7",
]

[project.scripts]
rula = "rula_realtime_app.__main__:main"

[project.optional-dependencies]
kinect = [
    "pykinect-azure",
]
